# RotatingPolygon_OpenGL

./: AllBuild.py  CMakeLists.txt
resources/shaders/: triangleColor.frag  trianglePos.vert
src/: DebugHelper.cpp  DebugHelper.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  main.cpp
src/Vertices/: VertexArray.cpp  VertexArray.hpp
src/Vertices/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/glfwHandlers/: WindowHandler.cpp  WindowHandler.hpp  glfwWrapper.cpp  glfwWrapper.hpp
